CHANGELOG

When		Who		What
======================================================================================
2019-04-17      Richard Forth   Ubuntu 14.04 went EOL. 
2019-02-14      Richard Forth   Closes #250
				Make the serverlimit apply only to prefork
				model.
2019-02-14      Richard Forth   Closes #289
				Apply fixup for borked ps command on Plesk
				servers.
2019-02-12      Richard Forth   Closes #294
				Add verbiage about new --skip-os-version-check
				option.
2019-02-12      psytester       PR #294
				exclude rotatelogs binary from $current_proc_count
				calculation
2019-02-12      Richard Forth   Closes Issue #292
				Updated man page textfile for 2019
2019-02-09      Richard Forth   Closes Issue #283
				This update treates varnich differently to
				other detected services due to changes in
				behvious from 4.1+
2019-02-09      Richard Forth   Revert changes made in  #283
				This went in staging but then got reverted as
				it caused problems and had inexpected
				behaviour.
2019-02-09      Richard Forth   Closes Issue #283
				Service detection inprovements to include
				services not running as root (eg vcache)
2019-02-01      Richard Forth   Closes Issue #12
				Detect and skip unexpected directories in
				glob. Previously these were added to the list
				of files for processing and caused an
				exception to be raised.
2019-01-23      Richard Forth   Closes Issue #287
				Typo on --skip-os-version-check option
				rectified.
2019-01-08      psytester       Added support for SUSE Linux and apache in
				/opt/apache2
2018-12-02      Richard Forth   Closes Issue #281
				Php memory limit was only interpretted in MB.
				Forced a change that accepts whatever is in
				the config, eg '128M' or '16G'.
2018-10-13      Richard Forth   Closes Issue #278
				logs to log (spelling correction in verbiage)
2018-10-13      Richard Forth   Closes Issue #194
				Detect issues getting package updates.
2018-10-13      Richard Forth   Closes Issue #245